# verification_scaling

./: .gitmodules  LICENSE  README.md  code_generation.py  main.py  pyproject.toml  test_case_generation.py  utils.py
scripts/: run.sh  run_sft.sh  run_tests.sh
tests/: test_utils.py
verification_scaling/: benchmark_e2b.py  check_execution_acc.py  code_generation.py  compute_acc.py  compute_metrics.py  execute.py  generate_code.py  generate_tests.py  main.py  process_coderm_data.py  process_dagger_data.py  process_data.py  run_generated_tests.py  run_generated_tests_no_assert.py  test_case_generation.py  utils.py
