[project]
name = "verification-scaling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "e2b-code-interpreter>=1.2.1",
    "open-r1",
    "torch>=2.6.0",
    "vllm>=0.8.3",
]

[tool.uv.sources]
open-r1 = { git = "https://github.com/huggingface/open-r1.git" }
